Se agrego el boton eliminar favoritos

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <h2>Mis pokemones favoritos</h2>
     <div id="favorite"></div>
 
+    <button id="btnDelete">Eliminar Favoritos</button>
+
     <script src="script.js"></script>
 </body>
 
